--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3hcP5p7Xb78CtWFqepg6o3Cf_9phV2KtvB3bht24OvRFL4Q/viewform?embedded=true" width="640" height="382" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3hcP5p7Xb78CtWFqepg6o3Cf_9phV2KtvB3bht24OvRFL4Q/viewform?embedded=true" width="100%" height="100%" position="fixed" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
